feat: P4ADEV-3419 added API delete client sil (#214)
