# src/main/java/it/gov/pagopa/pu/bff/controller/ClientController.java
@@ -31,7 +31,7 @@ public class ClientController implements ClientsApi {
   @Override
   public ResponseEntity<ClientDTO> registerClient(Long organizationId,
     CreateClientRequest createClientRequest) {
-    log.info("User requested for register new client for organizarionId {} having clientName {}", organizationId, createClientRequest.getClientName());
+    log.info("User requested for register new client for organizationId {} having clientName {}", organizationId, createClientRequest.getClientName());
     return ResponseEntity.ok(clientRetrieverService.registerClient(organizationId,createClientRequest,
       SecurityUtils.getLoggedUser(),
       SecurityUtils.getAccessToken()));
@@ -42,5 +42,12 @@ public class ClientController implements ClientsApi {
     log.info("User requested getClient having organizationId {} and clientId {}", organizationId, clientId);
     return ResponseEntity.ok(clientRetrieverService.getClient(
       organizationId, clientId, SecurityUtils.getLoggedUser(), SecurityUtils.getAccessToken()));
+  }
+
+  @Override
+  public ResponseEntity<Void> deleteClient(Long organizationId, String clientId) {
+    log.info("User requested delete client for organizationId {} and clientId {}", organizationId, clientId);
+    clientRetrieverService.deleteClient(organizationId, clientId, SecurityUtils.getLoggedUser(), SecurityUtils.getAccessToken());
+    return ResponseEntity.ok().build();
   }
 }
